Remove amount and and inflow/outflow to transactions. Adapt models to this changes

--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -5,7 +5,8 @@
 
   <div class="form-inputs">
     <%= f.input :date %>
-    <%= f.input :amount %>
+    <%= f.input :inflow %>
+    <%= f.input :outflow %>
     <%= f.association :account %>
     <%= f.association :payee %>
     <%= f.association :category %>
