--- a/app/views/transactions/show.html.erb
+++ b/app/views/transactions/show.html.erb
@@ -11,6 +11,16 @@
 </p>
 
 <p>
+  <strong>Inflow:</strong>
+  <%= @transaction.inflow %>
+</p>
+
+<p>
+  <strong>Outflow:</strong>
+  <%= @transaction.outflow %>
+</p>
+
+<p>
   <strong>Account:</strong>
   <%= @transaction.account.name %>
 </p>
