--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,34 +11,64 @@
 
   <body>
     
-    <h1><%= @current_month.month.strftime("%B/%Y") %></h1>
-    <h2>To be budgeted: <%= number_to_currency @current_month.to_be_budgeted %></h2>
-    <div>
-      <h3>Models</h3>
-      <%= link_to 'Account', accounts_path %>
-      <%= link_to 'Categories', categories_path %>
-      <%= link_to 'Groups', groups_path %>
-      <%= link_to 'Months', payees_path %>
-      <%= link_to 'Payees', payees_path %>
-      <%= link_to 'Transactions', transactions_path %>
-    </div>
+    <div class="container-fluid">
+      <h1><%= link_to @current_month.month.strftime("%B/%Y"), root_path %></h1>
+      <h2>To be budgeted: <%= number_to_currency @current_month.to_be_budgeted %></h2>
+      <div>
+        <h3>Models</h3>
+        <%= link_to 'Account', accounts_path %>
+        <%= link_to 'Categories', categories_path %>
+        <%= link_to 'Groups', groups_path %>
+        <%= link_to 'Months', payees_path %>
+        <%= link_to 'Payees', payees_path %>
+        <%= link_to 'Transactions', transactions_path %>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col-3">
+          <h3>Accounts</h3>
+          <table class="table table-bordered">
+            <thead>
+              <tr>
+                <th>Conta</th>
+                <th>Saldo</th>
+              </tr>
+            </thead>
+            <tbody>
+              <% Account.all.each do |acc| %>
+                <tr>
+                    <td><%= acc.name %></td>
+                    <td><%= number_to_currency acc.balance %></td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>      
+        </div>
 
-    <hr>
-    <h3>Accounts</h3>
-    <div>
-      <% Account.all.each do |acc| %>
-        <%= acc.name %> <%= number_to_currency acc.balance %>
-        <% unless acc == Account.all.last %> | <% end %>
-      <% end %>
-    </div>
+        <div class="col-9">
+            <h4>Categories</h4>
 
-    <hr>
-    <h4>Categories</h4>
-    <ul>
-      <% Category.all.each do |cat| %>
-        <li><%= cat.name %> | <strong>Saldo: </strong><%= number_to_currency cat.balance %> | <strong>Atividade:</strong> <%= number_to_currency cat.activity %></li>
-      <% end %>
-    </ul>
-    <%= yield %>
+            <table class="table table-bordered">
+              <thead>
+                <tr>
+                  <th>Nome</th>
+                  <th>Saldo</th>
+                  <th>Atividade</th>
+                </tr>
+              </thead>
+              <tbody>
+                <% Category.all.each do |cat| %>
+                  <tr>
+                    <td><%= cat.name %></td>
+                    <td><%= number_to_currency cat.balance %></td>
+                    <td><%= number_to_currency cat.activity %></td>
+                  </tr>
+                <% end %>
+              </tbody>
+            </table>
+            <%= yield %>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
