Create basics of transfers

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
         <%= link_to 'Months', payees_path %>
         <%= link_to 'Payees', payees_path %>
         <%= link_to 'Transactions', transactions_path %>
+        <%= link_to 'Transfers', transfers_path %>
       </div>
       <hr>
       <div class="row">
