--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Categories</h1>
-
-<table>
+<%= link_to 'New Category', new_category_path %>
+<table class="table table-bordered">
   <thead>
     <tr>
       <th>Name</th>
@@ -30,4 +30,3 @@
 
 <br>
 
-<%= link_to 'New Category', new_category_path %>
