--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,21 +10,44 @@
   </head>
 
   <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+      <%= link_to 'Budget', root_path, class: 'navbar-brand' %>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <%= link_to 'Account', accounts_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Categories', categories_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Groups', groups_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Months', payees_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Payees', payees_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Transactions', transactions_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Scheduled transactions', scheduled_transactions_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Transfers', transfers_path, class: 'nav-link' %>
+          </li>
+        </ul>
+      </div>
+    </nav>
     
     <div class="container-fluid">
       <!-- <h1><%= link_to @current_month.month.strftime("%B/%Y"), root_path %></h1>
       <h2>To be budgeted: <%= number_to_currency @current_month.to_be_budgeted %></h2> -->
-      <h1><%= link_to 'Budget', root_path %></h1>
-      <div>
-        <%= link_to 'Account', accounts_path %>
-        <%= link_to 'Categories', categories_path %>
-        <%= link_to 'Groups', groups_path %>
-        <%= link_to 'Months', payees_path %>
-        <%= link_to 'Payees', payees_path %>
-        <%= link_to 'Transactions', transactions_path %>
-        <%= link_to 'Transfers', transfers_path %>
-      </div>
-      <hr>
       <div class="row">
         <div class="col-3">
           <h3>Accounts</h3>
@@ -36,6 +59,18 @@
               </tr>
             </thead>
             <tbody>
+                <tr>
+                  <td>Assets</td>
+                  <td class="text-right"><%= number_to_currency Account.all.inject(0.0){|sum,x| x.balance >= 0 ? sum + x.balance : sum }%></td>
+                </tr>
+                <tr>
+                  <td>Debts</td>
+                  <td class="text-right"><%= number_to_currency Account.all.inject(0.0){|sum,x| x.balance < 0 ? sum + x.balance : sum }%></td>
+                </tr>
+                <tr>
+                  <td>All accounts / Net Worth</td>
+                  <td class="text-right"><%= number_to_currency Account.all.inject(0.0){|sum,x| sum + x.balance }%></td>
+                </tr>
               <% Account.order(name: :asc).each do |acc| %>
                 <tr>
                     <td>
@@ -50,6 +85,23 @@
         </div>
 
         <div class="col-9">
+          <% if alert.present? %>
+            <div class="alert alert-danger alert-dismissible fade show" role="alert">
+              <%= alert %>
+              <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+          <% end %>
+
+          <% if notice.present? %>
+            <div class="alert alert-success alert-dismissible fade show" role="alert">
+              <%= notice %>
+              <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+          <% end %>
             <%= yield %>
         </div>
       </div>
