--- a/app/views/months/index.html.erb
+++ b/app/views/months/index.html.erb
@@ -30,4 +30,4 @@
 
 <br>
 
-<%= link_to 'New Month', new_month_path %>
+<%= link_to 'New Month', new_month_path, class: 'btn btn-outline-primary' %>
