--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -11,10 +11,17 @@
     <% Category.order(name: :asc).each do |cat| %>
       <tr>
         <td><%= cat.name %></td>
-        <td><%= number_to_currency cat.budgeted %></td>
+        <td>
+          <!-- <%= number_to_currency cat.budgeted %> -->
+          <%= form_tag(budget_category_path(cat), html: { class: 'form-inline' }) do %>
+              <%= number_field_tag :budgeted, cat.budgeted, step: 0.01 %>
+                    
+              <%= submit_tag 'Save', class: 'btn btn-outline-secondary btn-sm' %>
+          <% end %>
+        </td>
         <td><%= number_to_currency cat.activity %></td>
         <td class="text-right">
-          <span class="badge badge-pill badge-lg <%= badge_color cat.balance %>" style="font-size: 1rem; font-weight: normal;">
+          <span class="badge badge-pill badge-lg <%= badge_color cat.balance %>">
             <%= number_to_currency cat.balance %>
           </span>
           <!--
