--- a/app/views/scheduled_transactions/index.html.erb
+++ b/app/views/scheduled_transactions/index.html.erb
@@ -34,4 +34,4 @@
 
 <br>
 
-<%= link_to 'New Scheduled Transaction', new_scheduled_transaction_path %>
+<%= link_to 'New Scheduled Transaction', new_scheduled_transaction_path, class: 'btn btn-outline-primary' %>
