--- a/app/views/transfers/index.html.erb
+++ b/app/views/transfers/index.html.erb
@@ -26,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New Transfer', new_transfer_path %>
+<%= link_to 'New Transfer', new_transfer_path, class: 'btn btn-outline-primary' %>
