--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Categories</h1>
-<%= link_to 'New Category', new_category_path %>
+<%= link_to 'New Category', new_category_path, class: 'btn btn-outline-primary' %>
 <table class="table table-bordered">
   <thead>
     <tr>
