--- a/app/views/payees/index.html.erb
+++ b/app/views/payees/index.html.erb
@@ -22,4 +22,4 @@
 
 <br>
 
-<%= link_to 'New Payee', new_payee_path %>
+<%= link_to 'New Payee', new_payee_path, class: 'btn btn-outline-primary' %>
