--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,28 +1,34 @@
 <h1>Accounts</h1>
-
-<table class="table table-bordered">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Account type</th>
-      <th>Balance</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @accounts.each do |account| %>
+<div class="table-responsive">
+  <table class="table table-bordered table-notbreakline">
+    <thead>
       <tr>
-        <td><%= account.name %></td>
-        <td><%= account.account_type %></td>
-        <td><%= account.balance %></td>
-        <td><%= link_to 'Show', account %></td>
-        <td><%= link_to 'Edit', edit_account_path(account) %></td>
-        <td><%= link_to 'Destroy', account, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Name</th>
+        <th>Account type</th>
+        <th>Balance</th>
+        <th></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+
+    <tbody>
+      <% @accounts.each do |account| %>
+        <tr>
+          <td><%= account.name %></td>
+          <td><%= account.account_type.titleize %></td>
+          <td class="text-right"><%= number_to_currency account.balance %></td>
+          <td>
+            <div class="btn-group btn-group-sm">
+              <%= link_to 'Show', account, class: 'btn btn-outline-secondary' %>
+              <%= link_to 'Edit', edit_account_path(account), class: 'btn btn-outline-secondary' %>
+              <%= link_to 'Destroy', account, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-outline-danger' %>
+            </div>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+  
+</div>
 
 <br>
 
