--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,12 +6,13 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet"> 
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-info sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-dark sticky-top" style="background-color: #225792;">
       <%= link_to 'Budget', root_path, class: 'navbar-brand' %>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -19,7 +20,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <%= link_to 'Account', accounts_path, class: 'nav-link' %>
+            <%= link_to 'Accounts', accounts_path, class: 'nav-link' %>
           </li>
           <li class="nav-item">
             <%= link_to 'Categories', categories_path, class: 'nav-link' %>
@@ -45,12 +46,28 @@
         </ul>
       </div>
 
-      <div class="navbar-tobebudgeted">
-        <div class="value">
-          R$ 200
-        </div>
-        <div class="description">
-          To be budgeted
+      <div class="navbar-tobebudgeted <%= to_be_budgeted_color @to_be_budgeted.balance %>">
+        <div class="row">
+          <div class="col-5">
+            <div class="value">
+              <%= number_to_currency @to_be_budgeted.balance %>
+            </div>
+            <div class="description">
+              To be budgeted
+            </div>
+          </div>
+          <div class="col-7">
+            <span class="description">
+              <ul>
+                <li>
+                  Budgeted: <%= number_to_currency @to_be_budgeted.budgeted %>
+                </li>
+                <li>
+                  Activity: <%= number_to_currency @to_be_budgeted.activity %>
+                </li>
+              </ul>
+            </span>
+          </div>
         </div>
       </div>
     </nav>
@@ -58,7 +75,7 @@
       <!-- <h1><%= link_to @current_month.month.strftime("%B/%Y"), root_path %></h1>
       <h2>To be budgeted: <%= number_to_currency @current_month.to_be_budgeted %></h2> -->
       <div class="row">
-        <div class="col-3 sidebar">
+        <div class="col-sm-3 sidebar d-none d-sm-block scrollable-y">
           <h3>Accounts</h3>
           <table class="table table-bordered table-sm table-accounts">
             <thead>
@@ -97,7 +114,7 @@
           </table>      
         </div>
 
-        <div class="col-9">
+        <div class="col-12 col-sm-9">
           <% if alert.present? %>
             <div class="alert alert-danger alert-dismissible fade show" role="alert">
               <%= alert %>
