--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
             <%= link_to 'Groups', groups_path, class: 'nav-link' %>
           </li>
           <li class="nav-item">
-            <%= link_to 'Months', payees_path, class: 'nav-link' %>
+            <%= link_to 'Months', months_path, class: 'nav-link' %>
           </li>
           <li class="nav-item">
             <%= link_to 'Payees', payees_path, class: 'nav-link' %>
