--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,13 +1,13 @@
 <div class="row">
   <div class="col-12 col-sm-9 scrollable-y">
     <div class="table-responsive">
-      <table class="table table-bordered table-sm table-notbreakline table-budget">
+      <table class="table table-sm table-notbreakline table-budget">
         <thead>
           <tr>
             <th>Category</th>
-            <th>Budgeted</th>
-            <th class="d-none d-sm-block">Activity</th>
-            <th>Available</th>
+            <th class="text-right">Budgeted</th>
+            <th class="d-none d-sm-block text-right">Activity</th>
+            <th class="text-right">Available</th>
           </tr>
         </thead>
         <tbody>
@@ -16,11 +16,11 @@
               <td><%= cat.name %></td>
               <td class="text-right">
                 <!-- <%= number_to_currency cat.budgeted %> -->
-                <%= form_tag(budget_category_path(cat), class: 'form-inline') do %>
-                    <%= number_field_tag :budgeted, cat.budgeted, step: 0.01 %>
+                <%= form_tag(budget_category_path(cat), class: 'form-inline float-right') do %>
+                    <%= text_field_tag :budgeted, cat.budgeted, step: 0.01 %>
                 <% end %>
               </td>
-              <td class="d-none d-sm-block"><%= number_to_currency cat.activity %></td>
+              <td class="text-right d-none d-sm-block"><%= number_to_currency cat.activity %></td>
               <td class="text-right">
                 <span class="badge badge-pill badge-lg <%= badge_color_category cat %>">
                   <%= number_to_currency cat.balance %>
@@ -47,15 +47,21 @@
           <table class="table table-bordered">
             <thead>
               <tr>
-                <td>Amount</td>
                 <td>Date</td>
+                <td>Amount</td>
               </tr>
             </thead>
+            <tfoot>
+              <tr>
+                <td>Total</td>
+                <td><%= number_to_currency cat.scheduled_transactions.inject(0.0){|sum,st| sum + st.amount }%></td>
+              </tr>
+            </tfoot>
             <tbody>
               <% cat.scheduled_transactions.each do |st| %>
               <tr>
-                <td><%= number_to_currency st.amount %></td>
                 <td><%= st.date.strftime("%d/%m/%Y") %></td>
+                <td><%= number_to_currency st.amount %></td>
               </tr>
               <% end %>
             </tbody>
