Create budgets and set session on init app

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -131,6 +131,14 @@ h1, h2, h3, h4, h5, h6 {
 	}
 }
 
+table a {
+	color: #212529;
+
+	&:hover {
+		text-decoration: none;
+	}
+}
+
 /* Extra small devices (phone
 
 s, up to 480px) */
