--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,7 +1,6 @@
-<p>
-  <strong>Name:</strong>
+<h1>
   <%= @category.name %>
-</p>
+</h1>
 
 <p>
   <strong>Budgeted:</strong>
@@ -17,6 +16,51 @@
   <strong>Balance:</strong>
   <%= @category.balance %>
 </p>
+
+
+<% @category.transactions.group_by { |m| m.date.beginning_of_month }.sort_by{|s| s[0] }.reverse!.each do |date, transactions| %>
+	<h2><%= date.strftime('%B %Y') %></h2>
+
+	<table class="table table-bordered table-sm">
+	  <thead>
+	    <tr>
+	      <th>Date</th>
+	      <th>Payee</th>
+	      <th>Category</th>
+	      <th>Note</th>
+	      <th>Amount</th>
+	      <th></th>
+	    </tr>
+	  </thead>
+
+	  <tbody>
+
+	    <% transactions.each do |transaction| %>
+	        <tr>
+	          <% if transaction.is_a? Transaction %>
+	            <td><%= transaction.date.strftime("%d/%m/%Y") %></td>
+	            <td><%= transaction.payee.name %></td>
+	            <td><%= transaction.category.name %></td>
+	          <% elsif transaction.is_a? Transfer %>
+	            <td><%= transaction.created_at.strftime("%d/%m/%Y") %></td>
+	            <td><%= transaction.account_to == @account ? transaction.account_from.name : transaction.account_to.name  %></td>
+	            <td>🔁 Transfer</td>
+	          <% end %>
+	          <td><%= transaction.note %></td>
+	          <td class="text-right <%= value_color transaction.amount %>"><%= number_to_currency transaction.amount %></td>
+	          <td>
+	            <div class="btn-group btn-group-sm">
+	              <%= link_to 'Show', transaction, class: 'btn btn-outline-secondary' %>
+	              <!-- <%= link_to 'Edit', edit_transaction_path(transaction), class: 'btn btn-outline-secondary' %> -->
+	              <%= link_to 'Destroy', transaction, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-outline-danger' %>
+	            </div>
+	          </td>
+	        </tr>
+	    <% end %>
+	  </tbody>
+	</table>
+
+<% end %>
 
 <%= link_to 'Edit', edit_category_path(@category) %> |
 <%= link_to 'Back', categories_path %>
