--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,9 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
+            <%= link_to 'Budgets', budgets_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
             <%= link_to 'Accounts', accounts_path, class: 'nav-link' %>
           </li>
           <li class="nav-item">
@@ -72,8 +75,6 @@
       </div>
     </nav>
     <div class="container-fluid">
-      <!-- <h1><%= link_to @current_month.month.strftime("%B/%Y"), root_path %></h1>
-      <h2>To be budgeted: <%= number_to_currency @current_month.to_be_budgeted %></h2> -->
       <div class="row">
         <div class="col-sm-3 sidebar d-none d-sm-block scrollable-y col-accounts">
           <h3>Accounts</h3>
