--- a/app/views/scheduled_transactions/index.html.erb
+++ b/app/views/scheduled_transactions/index.html.erb
@@ -4,29 +4,36 @@
   <thead>
     <tr>
       <th>Date</th>
-      <th>Account</th>
       <th>Payee</th>
       <th>Category</th>
-      <th>Inflow</th>
-      <th>Outflow</th>
-      <th>Done</th>
-      <th colspan="3"></th>
+      <th>Note</th>
+      <th>Amount</th>
+      <th></th>
     </tr>
   </thead>
+  <tfoot>
+    <tr class="text-right">
+      <th colspan="4">Total</th>
+      <th> <%= number_to_currency @scheduled_transactions.inject(0.0){|sum,st| sum + st.amount } %> </th>
+      <th></th>
+    </tr>
+  </tfoot>
 
   <tbody>
     <% @scheduled_transactions.each do |scheduled_transaction| %>
       <tr>
-        <td><%= scheduled_transaction.date %></td>
-        <td><%= scheduled_transaction.account.name %></td>
+        <td><%= scheduled_transaction.date.strftime("%d/%m/%Y") %></td>
         <td><%= scheduled_transaction.payee.name %></td>
         <td><%= scheduled_transaction.category.name %></td>
-        <td><%= scheduled_transaction.inflow %></td>
-        <td><%= scheduled_transaction.outflow %></td>
-        <td><%= scheduled_transaction.done %></td>
-        <td><%= link_to 'Show', scheduled_transaction %></td>
-        <td><%= link_to 'Edit', edit_scheduled_transaction_path(scheduled_transaction) %></td>
-        <td><%= link_to 'Destroy', scheduled_transaction, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= scheduled_transaction.note %></td>
+        <td class="text-right"><%= number_to_currency scheduled_transaction.amount %></td>
+        <td>
+          <div class="btn-group btn-group-sm">
+            <%= link_to 'Enter now', enter_now_scheduled_transaction_path(scheduled_transaction), class: 'btn btn-outline-success'%>
+            <%= link_to 'Edit', edit_scheduled_transaction_path(scheduled_transaction), class: 'btn btn-outline-secondary' %>
+            <%= link_to 'Destroy', scheduled_transaction, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-outline-secondary' %>
+          </div>
+        </td>
       </tr>
     <% end %>
   </tbody>
