--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -126,7 +126,7 @@
           </div>
         <% end %>
 
-        <div class="col">
+        <div class="col scrollable-y">
           <% if alert.present? %>
             <div class="alert alert-danger alert-dismissible fade show" role="alert">
               <%= alert %>
